Add cert-manager option for webhook serving certs (#2149)
* Add cert-manager option for webhook serving certs


* fix schema


---------
