# charts/kubedb-webhook-server/values.openapiv3_schema.yaml
@@ -1289,6 +1289,27 @@ properties:
         properties:
           caCrt:
             type: string
+          certManager:
+            properties:
+              enabled:
+                type: boolean
+              issuerRef:
+                properties:
+                  group:
+                    type: string
+                  kind:
+                    type: string
+                  name:
+                    type: string
+                required:
+                - group
+                - kind
+                - name
+                type: object
+            required:
+            - enabled
+            - issuerRef
+            type: object
           generate:
             type: boolean
           serverCrt:
